# python-template

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/technical/: project-organization.md
scripts/: example_calculation.py
src/calculator/: __init__.py  core.py
tests/: conftest.py  test_calculator.py
